@@ -9,6 +9,7 @@ CartoWeb HEAD
 - Added GET capabilities to outline plugin to generate on-the-fly point, line or polygon outline via URL.
 - Added new --clean-views and --clean-accounting options to cw3setup.php
 - Added LDAP storage for auth plugin
+- LayerOverlay accepts 'filter' and 'filteritem' attributes (patch from Dirk Jesko)
 
 2006-08-31: CartoWeb 3.3.0
 ==========================
